# sysmon

./: .gitignore  LICENSE  README.md  editor_mac.py  metrics.py  monitor.py  monitor_win.py  pyproject.toml  requirements.txt  run.bat  run.command  winfps_mac.py
src/sysmon_overlay/: __init__.py  cli.py  editor_mac.py  metrics.py  monitor.py  monitor_win.py
